--- a/BoardViewer.html
+++ b/BoardViewer.html
@@ -47,7 +47,7 @@
           [0, 0, 1, 0]
         ]);
 
-        var n = 4;
+        const n = 4;
         findNRooksSolution(n);
         countNRooksSolutions(n);
         findNQueensSolution(n);
