--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Mocha Spec Runner</title>
@@ -9,7 +9,7 @@
     <script src="lib/backbone.js"></script>
 
     <!-- testing frameworks -->
-    <link rel="stylesheet" href="lib/mocha/mocha.css">
+    <link rel="stylesheet" href="lib/mocha/mocha.css" />
     <script src="lib/mocha/mocha.js"></script>
     <script src="lib/chai/chai.js"></script>
     <script src="lib/sinon/sinon.js"></script>
